# face_similar_search

./: .gitignore  README.md  pyproject.toml
face_similar_search/: config.py  create_index.py  processing.py  search_image.py
