[tool.poetry]
name = "face-similar-search"
version = "0.1.0"
description = ""
authors = ["Luku"]
readme = "README.md"
packages = [{include = "face_similar_search"}]

[tool.poetry.dependencies]
python = "^3.10"
annoy = "^1.17.1"
cmake = "^3.26.1"
dlib = "^19.24.1"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
